--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloopp</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -85,7 +86,7 @@
                 </div>
             </div>
         </nav>
-        <div id="howItWork" class="container">
+        <div id="howItWork" class="container position-relative z-2">
             <div class="row flex-column flex-lg-row mt-80 justify-content-between">
                 <div class="d-flex col-12 col-lg-6 flex-column max-w-617 position-relative px-sm-0 pt-80">
                     <span class="position-absolute top-0 left-10"><svg width="80" height="80" viewBox="0 0 80 80"
@@ -105,7 +106,7 @@
                     <p class="max-w-448 text-white pt-20">Get exclusive discounts and coupons from the hottest brands
                         every time you recycle and track your environmental impact with the Cloopp App.</p>
                     <div class="d-flex align-items-center flex-column flex-sm-row gap-2 gap-sm-3 mt-4 pt-1">
-                        <a href="http://appstore.com" target="_blank" rel="noopener noreferrer">
+                        <a class="socalLinks" href="http://appstore.com" target="_blank" rel="noopener noreferrer">
                             <svg width="181" height="54" viewBox="0 0 181 54" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.687012" width="180" height="54" rx="4" fill="black" />
@@ -120,7 +121,7 @@
                                     fill="white" />
                             </svg>
                         </a>
-                        <a href="http://playstore.com" target="_blank" rel="noopener noreferrer"> <svg width="181"
+                        <a class="socalLinks" href="http://playstore.com" target="_blank" rel="noopener noreferrer"> <svg width="181"
                                 height="54" viewBox="0 0 181 54" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.687012" width="180" height="54" rx="4" fill="black" />
                                 <path
@@ -380,7 +381,8 @@
     <!-- Frequently Asked Questions -->
     <section id="faq" class="pt-40 position-relative">
         <div class="container position-relative z-2">
-            <h2 data-aos="fade-up" data-aos-duration="2000" class="text-black text-center pt-2">Frequently Asked Questions
+            <h2 data-aos="fade-up" data-aos-duration="2000" class="text-black text-center pt-2">Frequently Asked
+                Questions
             </h2>
             <div data-aos="fade-up" data-aos-duration="2000" class="accordionSec4 mx-auto pt-40 mb-3">
                 <div class="accordion-item border p-3">
@@ -428,8 +430,9 @@
     <!-- Subscribe Newsletter -->
     <section id="careers" class="bg-blue position-relative pb-2 pb-sm-3 pb-md-5">
         <img class="w-100 -translate-y-10 position-relative z-2" src="./assets/images/Vectorsec4.png" alt="image">
-        <div class="container py-120">
-            <h2 data-aos="fade-up" data-aos-duration="2000" class="text-white text-center pt-1 pt-sm-3 pt-md-4">Subscribe Newsletter</h2>
+        <div class="container py-120 position-relative z-3">
+            <h2 data-aos="fade-up" data-aos-duration="2000" class="text-white text-center pt-1 pt-sm-3 pt-md-4">
+                Subscribe Newsletter</h2>
             <p data-aos="fade-up" data-aos-duration="2000" class="text-white mt-2 mt-sm-3 opacity-75 text-center">
                 Subscribe to our newsletter for the latest news,
                 offers,
@@ -526,7 +529,7 @@
                     <ul class="d-flex flex-column m-0 p-0 ">
                         <li class="text-white op-8">Follow</li>
                         <div class="d-flex align-content-center gap-10 mt-2 pt-1">
-                            <a class="" href="http://instagram.com" target="_blank" rel="noopener noreferrer"><span
+                            <a class="socalLinks" href="http://instagram.com" target="_blank" rel="noopener noreferrer"><span
                                     class="socalLinks rounded-1 border-0 p-1"><svg width="17" height="16"
                                         viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -535,7 +538,7 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a class="" href="http://facebook.com" target="_blank" rel="noopener noreferrer"><span
+                            <a class="socalLinks" href="http://facebook.com" target="_blank" rel="noopener noreferrer"><span
                                     class="socalLinks rounded-1 border-0 p-1"><svg width="17" height="16"
                                         viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -544,7 +547,7 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a class="" href="http://twitter.com" target="_blank" rel="noopener noreferrer"><span
+                            <a class="socalLinks" href="http://twitter.com" target="_blank" rel="noopener noreferrer"><span
                                     class="socalLinks rounded-1 border-0 p-1">
                                     <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -554,7 +557,7 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a class="" href="http://telegram.com" target="_blank" rel="noopener noreferrer"><span
+                            <a class="socalLinks" href="http://telegram.com" target="_blank" rel="noopener noreferrer"><span
                                     class="socalLinks rounded-1 border-0 p-1"><svg width="17" height="16"
                                         viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
