--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloopp</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Recycle. Reward. " />
+    <meta name="description"
+        content="Get exclusive discounts and coupons from the hottest brands every time you recycle and track your environmental impact with the Cloopp App." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Recycle. Reward. " />
+    <meta property="og:description"
+        content="Get exclusive discounts and coupons from the hottest brands every time you recycle and track your environmental impact with the Cloopp App." />
+    <meta property="og:image" content="https://i.postimg.cc/zf7yRG2L/capture-20240305090005332.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Recycle. Reward. " />
+    <meta property="twitter:description"
+        content="Get exclusive discounts and coupons from the hottest brands every time you recycle and track your environmental impact with the Cloopp App." />
+    <meta property="twitter:image" content="https://i.postimg.cc/zf7yRG2L/capture-20240305090005332.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -121,8 +142,9 @@
                                     fill="white" />
                             </svg>
                         </a>
-                        <a class="socalLinks" href="http://playstore.com" target="_blank" rel="noopener noreferrer"> <svg width="181"
-                                height="54" viewBox="0 0 181 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <a class="socalLinks" href="http://playstore.com" target="_blank" rel="noopener noreferrer">
+                            <svg width="181" height="54" viewBox="0 0 181 54" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.687012" width="180" height="54" rx="4" fill="black" />
                                 <path
                                     d="M63.69 13.4366C63.69 14.5121 63.428 15.4532 62.7728 16.1254C61.9867 16.9321 61.0695 17.3354 59.8902 17.3354C58.711 17.3354 57.7938 16.9321 57.0076 16.1254C56.2214 15.3188 55.8284 14.3777 55.8284 13.1677C55.8284 11.9577 56.2214 11.0166 57.0076 10.21C57.7938 9.40333 58.711 9 59.8902 9C60.4143 9 60.9385 9.13444 61.4626 9.40332C61.9867 9.67221 62.3798 9.94109 62.6418 10.3444L61.9867 11.0166C61.4626 10.3444 60.8074 10.0755 59.8902 10.0755C59.1041 10.0755 58.3179 10.3444 57.7938 11.0166C57.1386 11.5544 56.8766 12.361 56.8766 13.3021C56.8766 14.2432 57.1386 15.0499 57.7938 15.5876C58.4489 16.1254 59.1041 16.5287 59.8902 16.5287C60.8074 16.5287 61.4626 16.2599 62.1177 15.5876C62.5108 15.1843 62.7728 14.6466 62.7728 13.9743H59.8902V12.8988H63.69V13.4366ZM69.7173 10.0755H66.1796V12.6299H69.4553V13.571H66.1796V16.1254H69.7173V17.2009H65.1313V9.13444H69.7173V10.0755ZM74.0412 17.2009H72.993V10.0755H70.7655V9.13444H76.2687V10.0755H74.0412V17.2009ZM80.0685 17.2009V9.13444H81.1167V17.2009H80.0685ZM86.0421 17.2009H84.5235V10.0755H82.296V9.13444H87.6681V10.0755H85.4407V17.2009H86.0421ZM98.0193 16.1254C97.2332 16.9321 96.316 17.3354 95.1367 17.3354C93.9575 17.3354 93.0403 16.9321 92.2541 16.1254C91.4679 15.3188 91.0749 14.3777 91.0749 13.1677C91.0749 11.9577 91.4679 11.0166 92.2541 10.21C93.0403 9.40333 93.9575 9 95.1367 9C96.316 9 97.2332 9.40333 98.0193 10.21C98.8055 11.0166 99.1986 11.9577 99.1986 13.1677C99.1986 14.3777 98.8055 15.3188 98.0193 16.1254ZM93.0403 15.4532C93.5644 15.991 94.3506 16.3943 95.1367 16.3943C95.9229 16.3943 96.7091 16.1254 97.2332 15.4532C97.7573 14.9154 98.1504 14.1088 98.1504 13.1677C98.1504 12.2266 97.8883 11.42 97.2332 10.8822C96.7091 10.3444 95.9229 9.94109 95.1367 9.94109C94.3506 9.94109 93.5644 10.21 93.0403 10.8822C92.5162 11.42 92.1231 12.2266 92.1231 13.1677C92.1231 14.1088 92.3851 14.9154 93.0403 15.4532ZM100.64 17.2009V9.13444H101.819L105.619 15.4532V9.13444H106.667V17.2009H105.619L101.557 10.6133V17.2009H100.64Z"
@@ -370,7 +392,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xl-6 d-flex justify-content-center">
-                    <img data-aos="fade-up" data-aos-duration="2000" class="w-100 max-w-617"
+                    <img data-aos="fade-up" data-aos-duration="2000" class="w-100 max-h-667 max-w-617"
                         src="./assets/images/sec3img.png" alt="image">
                 </div>
             </div>
@@ -529,26 +551,28 @@
                     <ul class="d-flex flex-column m-0 p-0 ">
                         <li class="text-white op-8">Follow</li>
                         <div class="d-flex align-content-center gap-10 mt-2 pt-1">
-                            <a class="socalLinks" href="http://instagram.com" target="_blank" rel="noopener noreferrer"><span
-                                    class="socalLinks rounded-1 border-0 p-1"><svg width="17" height="16"
-                                        viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a class="socalLinks" href="http://instagram.com" target="_blank"
+                                rel="noopener noreferrer"><span class="socalLinks rounded-1 border-0 p-1"><svg
+                                        width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M9.37234 1.33401C9.85883 1.33214 10.3453 1.33703 10.8317 1.34868L10.961 1.35334C11.1103 1.35868 11.2577 1.36534 11.4357 1.37334C12.145 1.40668 12.629 1.51868 13.0537 1.68334C13.4937 1.85268 13.8643 2.08201 14.235 2.45268C14.5739 2.78575 14.8362 3.18864 15.0037 3.63334C15.1683 4.05801 15.2803 4.54268 15.3137 5.25201C15.3217 5.42934 15.3283 5.57734 15.3337 5.72668L15.3377 5.85601C15.3495 6.34214 15.3546 6.82841 15.353 7.31468L15.3537 7.81201V8.68534C15.3553 9.17184 15.3502 9.65833 15.3383 10.1447L15.3343 10.274C15.329 10.4233 15.3223 10.5707 15.3143 10.7487C15.281 11.458 15.1677 11.942 15.0037 12.3667C14.8368 12.8119 14.5744 13.2151 14.235 13.548C13.9017 13.8869 13.4985 14.1492 13.0537 14.3167C12.629 14.4813 12.145 14.5933 11.4357 14.6267C11.2577 14.6347 11.1103 14.6413 10.961 14.6467L10.8317 14.6507C10.3453 14.6625 9.85884 14.6676 9.37234 14.666L8.87501 14.6667H8.00234C7.51585 14.6683 7.02936 14.6632 6.54301 14.6513L6.41368 14.6473C6.25542 14.6416 6.09719 14.6349 5.93901 14.6273C5.22968 14.594 4.74568 14.4807 4.32034 14.3167C3.87547 14.1496 3.4725 13.8872 3.13968 13.548C2.80037 13.2149 2.53783 12.8117 2.37034 12.3667C2.20568 11.942 2.09368 11.458 2.06034 10.7487C2.05292 10.5905 2.04625 10.4323 2.04034 10.274L2.03701 10.1447C2.02472 9.65833 2.01916 9.17184 2.02034 8.68534V7.31468C2.01848 6.82841 2.02337 6.34214 2.03501 5.85601L2.03968 5.72668C2.04501 5.57734 2.05168 5.42934 2.05968 5.25201C2.09301 4.54201 2.20501 4.05868 2.36968 3.63334C2.53726 3.18842 2.80032 2.78564 3.14034 2.45334C3.47294 2.11385 3.87565 1.85106 4.32034 1.68334C4.74568 1.51868 5.22901 1.40668 5.93901 1.37334L6.41368 1.35334L6.54301 1.35001C7.02913 1.33773 7.5154 1.33217 8.00168 1.33334L9.37234 1.33401ZM8.68701 4.66734C8.24535 4.6611 7.80685 4.74269 7.39699 4.90739C6.98714 5.07209 6.61411 5.3166 6.29957 5.62671C5.98504 5.93683 5.73528 6.30637 5.5648 6.71385C5.39433 7.12134 5.30654 7.55864 5.30654 8.00034C5.30654 8.44205 5.39433 8.87935 5.5648 9.28684C5.73528 9.69432 5.98504 10.0639 6.29957 10.374C6.61411 10.6841 6.98714 10.9286 7.39699 11.0933C7.80685 11.258 8.24535 11.3396 8.68701 11.3333C9.57106 11.3333 10.4189 10.9822 11.044 10.357C11.6692 9.73191 12.0203 8.88407 12.0203 8.00001C12.0203 7.11596 11.6692 6.26811 11.044 5.64299C10.4189 5.01787 9.57106 4.66734 8.68701 4.66734ZM8.68701 6.00068C8.95268 5.99578 9.21666 6.04388 9.46354 6.14215C9.71042 6.24042 9.93523 6.38691 10.1249 6.57304C10.3145 6.75918 10.4651 6.98123 10.568 7.22624C10.6708 7.47124 10.7238 7.73429 10.7239 8C10.7239 8.26572 10.671 8.52878 10.5682 8.77382C10.4655 9.01886 10.3149 9.24097 10.1253 9.42717C9.93577 9.61337 9.711 9.75992 9.46416 9.85828C9.21732 9.95664 8.95335 10.0048 8.68768 10C8.15724 10 7.64854 9.7893 7.27346 9.41422C6.89839 9.03915 6.68768 8.53044 6.68768 8.00001C6.68768 7.46958 6.89839 6.96087 7.27346 6.5858C7.64854 6.21072 8.15724 6.00001 8.68768 6.00001L8.68701 6.00068ZM12.187 3.66734C11.9719 3.67595 11.7685 3.76744 11.6194 3.92266C11.4703 4.07787 11.387 4.28477 11.387 4.50001C11.387 4.71525 11.4703 4.92215 11.6194 5.07736C11.7685 5.23258 11.9719 5.32407 12.187 5.33268C12.408 5.33268 12.62 5.24488 12.7763 5.0886C12.9325 4.93232 13.0203 4.72036 13.0203 4.49934C13.0203 4.27833 12.9325 4.06637 12.7763 3.91009C12.62 3.75381 12.408 3.66601 12.187 3.66601V3.66734Z"
                                             fill="white" />
                                     </svg>
                                 </span>
                             </a>
-                            <a class="socalLinks" href="http://facebook.com" target="_blank" rel="noopener noreferrer"><span
-                                    class="socalLinks rounded-1 border-0 p-1"><svg width="17" height="16"
-                                        viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a class="socalLinks" href="http://facebook.com" target="_blank"
+                                rel="noopener noreferrer"><span class="socalLinks rounded-1 border-0 p-1"><svg
+                                        width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M6.81852 14.3332H9.48519V8.99317H11.8879L12.1519 6.33984H9.48519V4.99984C9.48519 4.82303 9.55543 4.65346 9.68045 4.52843C9.80548 4.40341 9.97505 4.33317 10.1519 4.33317H12.1519V1.6665H10.1519C9.2678 1.6665 8.41996 2.01769 7.79484 2.64281C7.16971 3.26794 6.81852 4.11578 6.81852 4.99984V6.33984H5.48519L5.22119 8.99317H6.81852V14.3332Z"
                                             fill="white" />
                                     </svg>
                                 </span>
                             </a>
-                            <a class="socalLinks" href="http://twitter.com" target="_blank" rel="noopener noreferrer"><span
-                                    class="socalLinks rounded-1 border-0 p-1">
+                            <a class="socalLinks" href="http://twitter.com" target="_blank"
+                                rel="noopener noreferrer"><span class="socalLinks rounded-1 border-0 p-1">
                                     <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -557,9 +581,10 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a class="socalLinks" href="http://telegram.com" target="_blank" rel="noopener noreferrer"><span
-                                    class="socalLinks rounded-1 border-0 p-1"><svg width="17" height="16"
-                                        viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a class="socalLinks" href="http://telegram.com" target="_blank"
+                                rel="noopener noreferrer"><span class="socalLinks rounded-1 border-0 p-1"><svg
+                                        width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M15.6465 3.08151L13.534 13.044C13.3745 13.747 12.959 13.922 12.3685 13.591L9.14952 11.219L7.59652 12.713C7.42452 12.885 7.28102 13.0285 6.94952 13.0285L7.18102 9.75051L13.1465 4.36001C13.406 4.12901 13.09 4.00051 12.7435 4.23201L5.36852 8.87601L2.19352 7.88201C1.50302 7.66651 1.49052 7.19151 2.33752 6.86001L14.756 2.07551C15.331 1.86001 15.834 2.20301 15.6465 3.08151Z"
                                             fill="white" />
