--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
                 </div>
             </div>
         </nav>
-        <div id="howItWork" class="container position-relative z-2">
+        <div id="howItWork" class="container ">
             <div class="row flex-column flex-lg-row mt-80 justify-content-between">
-                <div class="d-flex col-12 col-lg-6 flex-column max-w-617 position-relative px-sm-0 pt-80">
+                <div
+                    class="d-flex col-12 col-lg-6 flex-column max-w-617 position-relative px-sm-0 pt-80 position-relative z-2">
                     <span class="position-absolute top-0 left-10"><svg width="80" height="80" viewBox="0 0 80 80"
                             fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path opacity="0.2"
