--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- preloder -->
     <div id="preloder"
-        class="d-flex position-fixed top-0 start-0 align-items-center justify-content-center w-100 vh-100 bg-white z-100">
+        class="d-flex position-fixed top-0 start-0 align-items-center justify-content-center w-100 vh-100 bg-blue z-100">
         <div class="loader">
             <span class="bar"></span>
             <span class="bar"></span>
